--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: daynemay@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   TODO: describe
 baseurl: "" # the subpath of your site, e.g. /blog/
+theme: hyde
 url: "http://daynemay.com" # the base hostname & protocol for your site
 twitter_username: daynemay
 github_username:  daynemay
